--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -3,7 +3,7 @@ body {
   padding: 0;
   margin: 0;
   font-family: -apple-system, BlinkMacSystemFont, Segoe UI, Roboto, Oxygen,
-    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif;
+    Ubuntu, Cantarell, Fira Sans, Droid Sans, Helvetica Neue, sans-serif !important;
 }
 
 a {
@@ -11,9 +11,9 @@ a {
   text-decoration: none;
 }
 
-h3 {
+h2, h3 {
   color: #373b3e;
-  font-weight: 700;
+  font-weight: 600;
 }
 
 * {
