feat: add image gallery

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -45,3 +45,7 @@ body::-webkit-scrollbar-thumb {
 
 /* set button(top and bottom of the scrollbar) */
 body::-webkit-scrollbar-button {display:none}
+
+.rec-slider-container{
+    margin: 0 15px !important;
+}
