feat: add lightbox gallery to image grid

--- a/src/components/vehicleProfile/imageGrid.module.scss
+++ b/src/components/vehicleProfile/imageGrid.module.scss
@@ -1,7 +1,9 @@
 @import 'src/sassTokens/breakpoints', 'src/sassTokens/baseColors';
 
 @mixin one-column-gallery {
+    height: 100%;
     grid-template-columns: 1fr;
+    grid-template-rows: 1fr;
     grid-template-areas: 'image-1';
 }
 
